remove double view, and fix tires from overlapping elements

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,5 @@ html, body {
   display: block;
   margin: auto;
   width: 100%;
-  max-width: 150vh;
   max-height: 100%;
 }
